添加域的curd功能
