# backend/docs/swagger.json
@@ -87,6 +87,161 @@
                 }
             }
         },
+        "/domain/add": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "systemDomainController"
+                ],
+                "summary": "添加域",
+                "operationId": "addSystemDomain",
+                "parameters": [
+                    {
+                        "description": "添加域请求参数",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.AddDomainRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response-bool"
+                        }
+                    }
+                }
+            }
+        },
+        "/domain/get_page": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "systemDomainController"
+                ],
+                "summary": "获取域的页数据",
+                "operationId": "getDomainInfoPage",
+                "parameters": [
+                    {
+                        "description": "获取域的页数据请求参数",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.SystemDomainPageRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response-response_PageResult-schema_SystemDomain"
+                        }
+                    }
+                }
+            }
+        },
+        "/domain/list_domains": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "systemDomainController"
+                ],
+                "summary": "获取域列表",
+                "operationId": "listDomains",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response-array_schema_SystemDomain"
+                        }
+                    }
+                }
+            }
+        },
+        "/domain/remove": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "systemDomainController"
+                ],
+                "summary": "删除域信息",
+                "operationId": "removeDomainInfo",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "域id",
+                        "name": "domain_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response-bool"
+                        }
+                    }
+                }
+            }
+        },
+        "/domain/update": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "systemDomainController"
+                ],
+                "summary": "更新域信息",
+                "operationId": "updateDomainInfo",
+                "parameters": [
+                    {
+                        "description": "更新域请求参数",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.UpdateDomainRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response-bool"
+                        }
+                    }
+                }
+            }
+        },
         "/init/check": {
             "get": {
                 "consumes": [
@@ -272,6 +427,17 @@
         }
     },
     "definitions": {
+        "request.AddDomainRequest": {
+            "type": "object",
+            "required": [
+                "domain_name"
+            ],
+            "properties": {
+                "domain_name": {
+                    "type": "string"
+                }
+            }
+        },
         "request.AddSystemUserRequest": {
             "type": "object",
             "required": [
@@ -396,6 +562,22 @@
                 }
             }
         },
+        "request.SystemDomainPageRequest": {
+            "type": "object",
+            "properties": {
+                "current": {
+                    "description": "当前页",
+                    "type": "integer"
+                },
+                "domain_name": {
+                    "type": "string"
+                },
+                "pageSize": {
+                    "description": "页数据量",
+                    "type": "integer"
+                }
+            }
+        },
         "request.SystemUserPageRequest": {
             "type": "object",
             "properties": {
@@ -422,6 +604,21 @@
                 "status": {
                     "description": "账号状态",
                     "type": "integer"
+                }
+            }
+        },
+        "request.UpdateDomainRequest": {
+            "type": "object",
+            "required": [
+                "domain_id",
+                "domain_name"
+            ],
+            "properties": {
+                "domain_id": {
+                    "type": "integer"
+                },
+                "domain_name": {
+                    "type": "string"
                 }
             }
         },
@@ -457,6 +654,30 @@
                 }
             }
         },
+        "response.PageResult-schema_SystemDomain": {
+            "type": "object",
+            "properties": {
+                "current": {
+                    "description": "当前页",
+                    "type": "integer"
+                },
+                "pageSize": {
+                    "description": "每页条数",
+                    "type": "integer"
+                },
+                "records": {
+                    "description": "数据列表",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.SystemDomain"
+                    }
+                },
+                "total": {
+                    "description": "总记录数",
+                    "type": "integer"
+                }
+            }
+        },
         "response.Response-any": {
             "type": "object",
             "properties": {
@@ -465,6 +686,25 @@
                     "example": 200
                 },
                 "data": {},
+                "msg": {
+                    "type": "string",
+                    "example": "成功"
+                }
+            }
+        },
+        "response.Response-array_schema_SystemDomain": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.SystemDomain"
+                    }
+                },
                 "msg": {
                     "type": "string",
                     "example": "成功"
@@ -519,6 +759,22 @@
                 }
             }
         },
+        "response.Response-response_PageResult-schema_SystemDomain": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "data": {
+                    "$ref": "#/definitions/response.PageResult-schema_SystemDomain"
+                },
+                "msg": {
+                    "type": "string",
+                    "example": "成功"
+                }
+            }
+        },
         "response.Response-response_SystemUserVo": {
             "type": "object",
             "properties": {
@@ -538,6 +794,14 @@
         "response.SystemUserPageVo": {
             "type": "object",
             "properties": {
+                "account": {
+                    "description": "账号",
+                    "type": "string"
+                },
+                "createTime": {
+                    "description": "创建时间",
+                    "type": "string"
+                },
                 "domainName": {
                     "description": "所属域",
                     "type": "string"
@@ -594,6 +858,26 @@
                 "userId": {
                     "description": "用户id",
                     "type": "integer"
+                }
+            }
+        },
+        "schema.SystemDomain": {
+            "type": "object",
+            "properties": {
+                "create_time": {
+                    "type": "string"
+                },
+                "domain_id": {
+                    "type": "integer"
+                },
+                "domain_name": {
+                    "type": "string"
+                },
+                "is_delete": {
+                    "type": "boolean"
+                },
+                "update_time": {
+                    "type": "string"
                 }
             }
         }
